Working on tables about preprocessing operations.

--- a/data.tex
+++ b/data.tex
@@ -54,7 +54,7 @@ discussing their common mathematical foundations.
     \item Present the main concepts about data theory.
   \end{itemize}
 
-  \boxsubtitle{Takeways}
+  \boxsubtitle{Takeaways}
 
   \begin{itemize}
     \itemsep0em
