--- a/ethics.tex
+++ b/ethics.tex
@@ -27,7 +27,7 @@ A few comments on the ethical, privacy-related and legal issues that data scient
     \item \dots
   \end{itemize}
 
-  \boxsubtitle{Takeways}
+  \boxsubtitle{Takeaways}
 
   \begin{itemize}
     \item \dots
