--- a/handling.tex
+++ b/handling.tex
@@ -55,7 +55,7 @@ I also highlight some important properties of these operations.
     \item Define a set of operations that can be applied to tables.
   \end{itemize}
 
-  \boxsubtitle{Takeways}
+  \boxsubtitle{Takeaways}
 
   \begin{itemize}
     \itemsep0em
