--- a/history.tex
+++ b/history.tex
@@ -59,7 +59,7 @@ sometimes avoiding directions that are not relevant in the context of inductive 
     \item Identify important figures in the history of data-driven sciences.
   \end{itemize}
 
-  \boxsubtitle{Takeways}
+  \boxsubtitle{Takeaways}
 
   \begin{itemize}
     \itemsep0em
