--- a/inductive.tex
+++ b/inductive.tex
@@ -50,7 +50,7 @@ algorithms for the learning process: the perceptron and the maximal margin class
     \item Understand the main principles that guide the learning process.
   \end{itemize}
 
-  \boxsubtitle{Takeways}
+  \boxsubtitle{Takeaways}
 
   \begin{itemize}
     \itemsep0em
