--- a/planning.tex
+++ b/planning.tex
@@ -44,7 +44,7 @@ framework for experimental planning that can be used in most data science projec
     \item \dots
   \end{itemize}
 
-  \boxsubtitle{Takeways}
+  \boxsubtitle{Takeaways}
 
   \begin{itemize}
     \item \dots
