--- a/project.tex
+++ b/project.tex
@@ -56,7 +56,7 @@ extension to Scrum adapted for data science projects.
     \item Propose an extension to Scrum adapted for data science projects.
   \end{itemize}
 
-  \boxsubtitle{Takeways}
+  \boxsubtitle{Takeaways}
 
   \begin{itemize}
     \itemsep0em
