--- a/structured.tex
+++ b/structured.tex
@@ -52,7 +52,7 @@ As a result, the reader will be equipped with the mindset to perform data tasks
     \item Enable the reader to perform data tasks well by associating data format and semantics.
   \end{itemize}
 
-  \boxsubtitle{Takeways}
+  \boxsubtitle{Takeaways}
 
   \begin{itemize}
     \itemsep0em
