--- a/references.bib
+++ b/references.bib
@@ -558,3 +558,16 @@ pages = {107–113},
     note={\url{http://www.deeplearningbook.org}},
     year={2016}
 }
+
+@article{Troyanskaya2001,
+    author = {Troyanskaya, Olga and Cantor, Michael and Sherlock, Gavin and Brown, Pat and Hastie, Trevor and Tibshirani, Robert and Botstein, David and Altman, Russ B.},
+    title = {Missing value estimation methods for DNA microarrays },
+    journal = {Bioinformatics},
+    volume = {17},
+    number = {6},
+    pages = {520-525},
+    year = {2001},
+    month = {06},
+    issn = {1367-4803},
+    doi = {10.1093/bioinformatics/17.6.520},
+}
