--- a/references.bib
+++ b/references.bib
@@ -571,3 +571,13 @@ pages = {107–113},
     issn = {1367-4803},
     doi = {10.1093/bioinformatics/17.6.520},
 }
+
+@inproceedings{Ester1996,
+  title={A density-based algorithm for discovering clusters in large spatial databases with noise},
+  author={Ester, Martin and Kriegel, Hans-Peter and Sander, J{\"o}rg and Xu, Xiaowei and others},
+  booktitle={kdd},
+  volume={96},
+  number={34},
+  pages={226--231},
+  year={1996}
+}
