--- a/glossary.tex
+++ b/glossary.tex
@@ -21,6 +21,7 @@
 \newabbreviation{vc}{VC}{Vapnik-Chervonenkis}
 \newabbreviation{srm}{SRM}{structural risk minimization}
 \newabbreviation{mlp}{MLP}{multilayer perceptron}
+\newabbreviation{iqr}{IQR}{interquartile range}
 
 \newglossaryentry{ontology}{%
   name=ontology,
