--- a/references.bib
+++ b/references.bib
@@ -581,3 +581,14 @@ pages = {107–113},
   pages={226--231},
   year={1996}
 }
+
+@article{Scholkopf2001,
+  title={Estimating the support of a high-dimensional distribution},
+  author={Sch{\"o}lkopf, Bernhard and Platt, John C and Shawe-Taylor, John and Smola, Alex J and Williamson, Robert C},
+  journal={Neural computation},
+  volume={13},
+  number={7},
+  pages={1443--1471},
+  year={2001},
+  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+}
