--- a/preprocess.tex
+++ b/preprocess.tex
@@ -366,11 +366,6 @@ a new column that contains a logical value indicating whether the data is missin
 not\footnote{Some kind of imputation is still needed, but we expect the model to deal
 better with it since it can decide using both the indicator and the original variable.}.
 
-% TODO: table
-
-% \footnote{\color{red}Sometimes the indicator variable is already present: pregnancy and sex
-% example.}.
-
 Many times the indicator variable is already present in the data.  For instance, in a
 dataset that contains information about pregnancy, let us say the number of days since
 the last pregnancy.  This information certainly be missing if sex is male
@@ -380,35 +375,77 @@ See \cref{tab:col-drop-missing}.
 \subsection{Outliers}
 
 Outliers are observations that are significantly different from the other observations.
-They can be caused by errors in the data collection process or by the presence of a
-different phenomenon.  In both cases, it is important to deal with outliers before
-modeling.
+They can be caused by errors or by the presence of a different phenomena mixed in the data
+collection process.  In both cases, it is important to deal with outliers before modeling.
 
-There are many outliers detection methods, such as the Z-score, the IQR, and adaptations
-to algorithms like DBSCAN\footfullcite{Ester1996}.
-% TODO
+The standard way to deal with outliers is to remove them from the dataset.  Assuming that
+the errors or the out of distribution data appear randomly and rarely, this is a good
+strategy.
+
+Another approach is dealing with each variable independently.  This way, one can replace
+the outlier value with missing data.  There are many ways to detect outlier values, but
+the simplest one is probably a heuristic based on the \gls{iqr}.
+
+Let $Q_1$ and $Q_3$ be the first and the third quartiles of the values in a variable,
+respectively.  The \gls{iqr} is defined as $Q_3 - Q_1$.  The values that are less than
+$Q_1 - 1.5\, \text{IQR}$ or greater than $Q_3 + 1.5\, \text{IQR}$ are considered outliers.
+See \cref{tab:iqr-outlier}.
+
+\begin{tablebox}[label=tab:iqr-outlier]{Outlier detection using the interquartile range.}
+  \centering
+  \rowcolors{2}{black!10!white}{}
+  \begin{tabular}{lp{6cm}}
+    \toprule
+    \multicolumn{2}{c}{\textbf{Outlier detection using the IQR}} \\
+    \midrule
+    % \textbf{Requirements} &
+    %   A numerical variable. \\
+    \textbf{Goal} &
+      Detect outliers using the IQR. \\
+    \textbf{Fitting} &
+      Store the values of $Q_1$ and $Q_3$ for each variable. \\
+    \textbf{Adjustment} &
+      Training set is adjusted sample by sample, independently. \\
+    \textbf{Applying} &
+      Preprocessor replaces the outlier values with missing data. \\
+    \bottomrule
+  \end{tabular}
+\end{tablebox}
+
+More sophisticated methods can be used to detect samples that are outliers, such as using
+the definition of an outlier in the DBSCAN\footfullcite{Ester1996}.  However, this is not
+enough to fit the parameters of the preprocessor.  The reason is that descriptive methods
+like DBSCAN  --- in this case, a method for clustering --- do not generalize to new data.
+I suggest using methods like One-Class SVM\footfullcite{Scholkopf2001} to fit the
+parameters of the preprocessor that detects outliers.  Thus, any new data point can
+be classified as an outlier or not.
 
 Like filtering operations in the pipeline, the developer must specify a default behavior
-for the model when an outlier is detected in production.
+for the model when an outlier sample is detected in production.  See
+\cref{tab:outlier-removal}.
 
-% \begin{slidebox}{Data cleaning}{}
-%   \begin{itemize}
-%     \item Data cleaning is the process of removing errors and inconsistencies from the data;
-%     \item Use the following strategies to deal with missing data:
-%       \begin{itemize}
-%         \item Remove the rows with missing data;
-%         \item Remove the columns with missing data;
-%         \item Impute the missing data;
-%         \item Use an indicator variable to mark the missing data.
-%       \end{itemize}
-%     \item Replace special codes with more appropriate values;
-%     \item Create a dictionary to map different names to a single one;
-%     \item Check whether all columns that store physical quantities have the same unit of
-%       measurement;
-%     \item Check whether the values are within the expected range;
-%     \item Use outlier detection methods to deal with outliers.
-%   \end{itemize}
-% \end{slidebox}
+\begin{tablebox}[label=tab:outlier-removal]{Task of filtering outliers.}
+  \centering
+  \rowcolors{2}{black!10!white}{}
+  \begin{tabular}{lp{6cm}}
+    \toprule
+    \multicolumn{2}{c}{\textbf{Outlier removal}} \\
+    \midrule
+    % \textbf{Requirements} &
+    %   A dataset with outliers. \\
+    \textbf{Goal} &
+      Remove the observations that are outliers. \\
+    \textbf{Fitting} &
+      Parameters of the outlier classifier. \\
+    \textbf{Adjustment} &
+      Training set is adjusted sample by sample, independently, removing
+      degenerated samples. \\
+    \textbf{Applying} &
+      Preprocessor degenerates if the sample is classified as outliers and does
+      nothing, otherwise. \\
+    \bottomrule
+  \end{tabular}
+\end{tablebox}
 
 \section{Data transformation}
 
