--- a/handling.tex
+++ b/handling.tex
@@ -801,6 +801,7 @@ The case where the predicate depends on the values of the columns is discussed i
 \cref{sub:grouped-arranged}.
 
 \subsection{Filtering}
+\label{sub:filtering}
 
 Filtering is the process of selecting a subset of rows from a dataset based on a
 predicate.
