--- a/references.bib
+++ b/references.bib
@@ -592,3 +592,18 @@ pages = {107–113},
   year={2001},
   publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
 }
+
+
+@article{Freek2015,
+title = {Many regression algorithms, one unified model: A review},
+journal = {Neural Networks},
+volume = {69},
+pages = {60-79},
+year = {2015},
+issn = {0893-6080},
+doi = {https://doi.org/10.1016/j.neunet.2015.05.005},
+url = {https://www.sciencedirect.com/science/article/pii/S0893608015001185},
+author = {Freek Stulp and Olivier Sigaud},
+keywords = {Regression, Locally weighted regression, Gaussian mixture regression, Radial basis function networks, Gaussian process regression},
+abstract = {Regression is the process of learning relationships between inputs and continuous outputs from example data, which enables predictions for novel inputs. The history of regression is closely related to the history of artificial neural networks since the seminal work of Rosenblatt (1958). The aims of this paper are to provide an overview of many regression algorithms, and to demonstrate how the function representation whose parameters they regress fall into two classes: a weighted sum of basis functions, or a mixture of linear models. Furthermore, we show that the former is a special case of the latter. Our ambition is thus to provide a deep understanding of the relationship between these algorithms, that, despite being derived from very different principles, use a function representation that can be captured within one unified model. Finally, step-by-step derivations of the algorithms from first principles and visualizations of their inner workings allow this article to be used as a tutorial for those new to regression.}
+}
